<resources>
    <string name="app_name">Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau berbagi keseharian mu yang menyenangkan, tapi bingung di mana, di Story App aja!</string>
    <string name="title_welcome_page">Selamat datang di Story App</string>
    <string name="title_signup_page">Lengkapi data kamu di bawah ini dulu ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Silahkan login terlebih dahulu</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Ayo update keseharian mu di sini.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="empty_image_warning">Gambar tidak tersedia</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Lanjut</string>
    <string name="previous">Previous</string>
    <string name="error_saat_mengambil_foto">Error saat mengambil foto: %1$s</string>
    <string name="add_a_caption">Tambahkan keterangan…</string>
    <string name="error_starting_camera">Error starting camera</string>
    <string name="succes_save_img">Foto berhasil disimpan dan akan muncul di galeri</string>
    <string name="need_permission_camera">Izin kamera diperlukan untuk menggunakan fitur ini</string>
    <string name="nothing_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="succes_upload">Upload gambar berhasil</string>
    <string name="success">Berhasil!</string>
    <string name="success_make_account">Akun dengan %1$s sudah berhasil dibuat.</string>
    <string name="error_occurred_try_again">Terjadi kesalahan. Coba lagi.</string>
    <string name="must_be_filled">Semua kolom harus diisi!</string>
    <string name="welcome_login">Selamat datang %1$s, Anda berhasil login!</string>
    <string name="email_and_password_cant_blank">Email dan password tidak boleh kosong.</string>
    <string name="cannot_be_empty">%1$s tidak boleh kosong</string>
    <string name="email_format_cannot_valid">Format email tidak valid</string>
    <string name="password_must_then_8">Password harus lebih dari 8 karakter</string>
    <string name="days_a_go">%1$s hari yang lalu</string>
    <string name="hours_a_go">%1$s jam yang lalu</string>
    <string name="minute_a_go">%1$s menit yang lalu</string>
    <string name="now">Sekarang</string>
    <string name="time_is_not_available">Waktu tidak tersedia</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="empty_stories">Belum ada cerita untuk ditampilkan</string>
    <string name="no_internet">Tidak ada koneksi internet</string>
    <string name="unable_to_resolve_host">tidak dapat menyelesaikan host</string>
    <string name="network_error">kesalahan jaringan</string>
    <string name="description">Tolong isi deskripsi terlebih dahulu!</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelit</string>
    <string name="terrain_type" >Medan</string>
    <string name="hybrid_type" >Hibrida</string>
    <string name="add_location">Tambahkan Lokasi Saat Ini</string>
    <string name="location_not_available">Lokasi tidak tersedia</string>
    <string name="masukkan_email_dan_password_yang_sesuai">Masukkan Email dan password yang sesuai!</string>

</resources>